# raytracer

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
benches/: sphere.rs
src/: camera.rs  canvas.rs  colors.rs  intersections.rs  lib.rs  main.rs  materials.rs  rays.rs  sphere.rs  world.rs
src/canvas/: mod.rs  renderers.rs
src/lights/: point_light.rs
src/linear/: matrices.rs  mod.rs  tuple.rs
src/objects/: base_shape.rs  mod.rs  object_id.rs  plane.rs  shape.rs  sphere.rs  test_shape.rs
tests/: camera_tests.rs  canvas_renderer_tests.rs  canvas_tests.rs  color_tests.rs  intersection_tests.rs  material_tests.rs  matrix_tests.rs  sphere_tests.rs  transform_tests.rs  tuple_tests.rs  world_tests.rs
