[package]
name = "raytracer"
version = "0.10.0"
authors = ["Chathan Driehuys <chathan@driehuys.com>"]
edition = "2018"

[lib]
bench = false

[[bin]]
name = "raytracer"
path = "src/main.rs"
bench = false

[[bench]]
name = "sphere"
harness = false

[dependencies]
float-cmp = "0.8.0"
lazy_static = "1.4.0"
rayon = { version = "1.7.0" }

[dev-dependencies]
criterion = { version = "0.4.0" }
